# sph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  resources.conf
assets/shaders/: ParticleSphereShader.vert
include/: SPH.h  SPHKernels.h
include/Objects/: ArcBallCamera.h  FlatShadeObject.h  ParticleGroup.h  ParticleVertex.h  WireframeObjects.h
include/Shaders/: ParticleSphereShader.h
lib/: CMakeLists.txt  SPH.cpp
lib/Objects/: ArcBall.cpp  ParticleGroup.cpp
lib/Shaders/: ParticleSphereShader.cpp
src/: CMakeLists.txt  main.cpp  main.cpp.bkp
